[project]
name = "scheduler"
version = "0.1.0"
description = "Планировщик заданий"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
    "schedule>=1.2.2",
    "watchfiles>=1.0.5",
]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[project.scripts]
scheduler = "main:cli"

[tool.setuptools]
py-modules = ["main"]